# motherboard

./: CMakeLists.txt  README.md
docs/: how_to_setup.md
include/: FreeRTOSConfig.h  main.h  usbTaskHelper.hpp
src/: main.cpp  usbTaskHelper.cpp
